--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -2,7 +2,7 @@ flutter_native_splash:
   color: '#ffffff'
   image: assets/cat.jpg
   android_12:
-    image: assets/cat.jpg
+    image: assets/catAndroid.jpg
     color: "#ffffff"
   ios:
     color: "#ffffff"
