--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,10 +1,7 @@
 flutter_native_splash:
   color: '#ffffff'
-  image: assets/cat.jpg
-  android_12:
-    image: assets/catAndroid.jpg
-    color: "#ffffff"
-  ios:
-    color: "#ffffff"
-    image: assets/cat.jpg
+  image: assets/CatImageOption.png
+  ios: true
   web: false
+  android_12:
+    image: assets/CatImageOption.png
